[package]
name = "crosswind"
version = "0.1.0"
edition = "2021"
default-run = "crosswind"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
exec = "0.3.1"
if-addrs = "0.10.1"
serde = "1.0.156"
serde_json = "1.0.94"
socket2 = "0.4.7"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["full"] }
